--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,13 @@
+body{
+  background-color: #f6faff;
+  color: #6c7686;
+}
 .top-wrapper{
-  background-image: url("cube.jpg");
+  /* background-image: url("cube.jpg"); */
   background-size: cover;
   padding-bottom: 250;
   opacity: 0.6;
   text-align: center;
-
 }
 
 h1{color:#02ccba;}
@@ -21,5 +24,5 @@ h1{color:#02ccba;}
 }
 
 .link_list a{
-background-color: #55acee;
+/*background-color: #55acee;*/
 }
