--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,7 @@ body{
   background-color: #f6faff;
   color: #6c7686;
 }
+
 .top-wrapper{
   /* background-image: url("cube.jpg"); */
   background-size: cover;
@@ -20,8 +21,27 @@ h1{color:#02ccba;}
   list-style: none;
   padding:20px 20px;
   color: black;
+
 }
 
 .link_list a{
 /*background-color: #55acee;*/
+}
+
+.footer {
+  background-color: #2f5167;
+  color:#fff;
+  height: 50px;
+  padding:0px 40px;
+  padding-top: 5px;
+  padding-bottom: 30px;
+
+}
+
+.footer-list{
+  float:right;
+}
+
+.footer-list li{
+  list-style: none;
 }
