--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,31 +1,25 @@
 body{
   background-color: #f6faff;
   color: #6c7686;
+  text-align: center;
 }
 
 .top-wrapper{
-  /* background-image: url("cube.jpg"); */
   background-size: cover;
   padding-bottom: 250;
   opacity: 0.6;
-  text-align: center;
 }
 
 h1{color:#02ccba;}
 
-.link_list{
-  width: 100;
-}
+h2{font-size: 16px;}
+
+
 
 .link_list li{
   list-style: none;
-  padding:20px 20px;
-  color: black;
-
-}
-
-.link_list a{
-/*background-color: #55acee;*/
+  padding:20px;
+  padding-right: 65px;
 }
 
 .footer {
